2004-06-22  Theodore A. Roth  <troth@openavr.org>

	* xml/Atmel2libc.py: Fixes to allow validation of generated file.
	* xml/Device.dtd: Ditto.
	* xml/Validate.py: New file.

2004-06-22  Theodore A. Roth  <troth@openavr.org>

	* xml/Device.dtd: Fix some syntax errors.

2004-06-22  Theodore A. Roth  <troth@openavr.org>

	* xml/Atmel2libc.py: Now dumps header, memory size info and interrupts
	data as well-formed XML.
	* xml/Device.dtd: Change memory info to memory sizes.

2004-06-21  Theodore A. Roth  <troth@openavr.org>

	* xml/Atmel2libc.py: New file.
	* xml/Device.dtd: Don't force copyright/license in doc (just use a
	comment).
	Make device name an attribute of device.
	Add memory_info element of device.
	Massage the interrupt and vector elements.

2004-06-20  Theodore A. Roth  <troth@openavr.org>

	* xml: New directory.
	* xml/Device.dtd: New file.

2004-06-04  Theodore A. Roth  <troth@openavr.org>

	* Makefile.am (install-data-local): Install version.h file.
	* acconfig.h: New file.
	* config-ml.in: When adding the Multi.tem fragment to the Makefile,
	don't use a variable or the fragment will be added to the version.h
	file instead of the Makefile.
	* configure.in: Generate the version.h config header file.
	* reconf: Run autoheader.

2004-05-25  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/examples/demo.c: Update for ATmega8

2004-05-21  Theodore A. Roth  <troth@openavr.org>
[Contributed by Bruce Graham <bgraham@huronnet.com>]

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* include/avr/iotn13.h: Add comments for register defs.
	Fix SPMEN bit def.

2004-05-14  Theodore A. Roth  <troth@openavr.org>
[Thanks to Bruce Graham <bgraham@huronnet.com> for reporting these.]

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* include/avr/iocan128.h (SRW00, SRW01, SRW10, SRW11): Fix bit name.
	(FOC2A, COM2A1, COM2A0): Ditto.

2004-05-13  Theodore A. Roth  <troth@openavr.org>
[Thanks to Bruce Graham <bgraham@huronnet.com> for reporting these.]
